[gd_scene load_steps=3 format=2]

[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameSaveRelated/GUIs/GameSettingsRelated/AssistModePanel/Subs/AssistModeMiniSummaryPanel/AssistModeMiniSummaryPanel.gd" type="Script" id=2]

[node name="AssistModeMiniSummaryPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 207.0
margin_bottom = 52.0
mouse_filter = 2

[node name="MainButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 207.0
margin_bottom = 33.0

[node name="TextureButton" parent="VBoxContainer/MainButton" index="0"]
margin_right = 207.0
margin_bottom = 33.0

[node name="LabelContainer" parent="VBoxContainer/MainButton" index="1"]
margin_right = 207.0
margin_bottom = 33.0

[node name="Label" parent="VBoxContainer/MainButton/LabelContainer" index="0"]
margin_right = 207.0
margin_bottom = 33.0
text = "Assist Mode"

[node name="LabelStatus" type="Label" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 207.0
margin_bottom = 52.0
text = "(Active, but No Effect)"
align = 1

[connection signal="button_pressed" from="VBoxContainer/MainButton" to="." method="_on_MainButton_button_pressed"]

[editable path="VBoxContainer/MainButton"]
